--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "start": "nodemon src/app.ts",
+    "build": "tsc",
     "lint": "eslint src/**/*.ts --fix",
     "prebuild": "rimraf dist",
-    "build": "tsc"
+    "start": "nodemon src/app.ts",
+    "test": "jest"
   },
   "dependencies": {
     "@hapi/joi": "^17.1.0",
@@ -21,7 +22,8 @@
     "helmet": "^3.21.2",
     "jest": "^25.1.0",
     "log4js": "^6.1.1",
-    "morgan": "^1.9.1"
+    "morgan": "^1.9.1",
+    "supertest": "^4.0.2"
   },
   "devDependencies": {
     "@types/cors": "^2.8.6",
@@ -32,6 +34,7 @@
     "@types/log4js": "^2.3.5",
     "@types/morgan": "^1.7.37",
     "@types/node": "^13.7.0",
+    "@types/supertest": "^2.0.8",
     "@typescript-eslint/eslint-plugin": "^2.19.0",
     "@typescript-eslint/parser": "^2.19.0",
     "eslint": "^6.8.0",
@@ -50,7 +53,7 @@
     "transform": {
       "^.+\\.ts$": "ts-jest"
     },
-    "testRegex": "(/__tests__/.*|\\.(test.ts|spec.ts))\\.(ts|tsx|js)$",
+    "testRegex": "(/__tests__/.*|\\.(test|spec))\\.(ts|tsx|js)$",
     "moduleFileExtensions": [
       "ts",
       "tsx",
