--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "prod:restart": "pm2 restart all",
     "prod:list": "pm2 ls",
     "prod:monit": "pm2 monit"
-
   },
   "dependencies": {
     "@hapi/joi": "^17.1.0",
@@ -70,8 +69,9 @@
       "json",
       "node"
     ],
-    "testPathIgnorePatterns" : [
-      "dist"
+    "testPathIgnorePatterns": [
+      "dist",
+      "node_modules"
     ]
   }
 }
